--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,8 +4,8 @@ version: 0.1.6
 homepage: https://github.com/Alystrasz/bluetooth_enable_fork
 
 environment:
-  sdk: ">=2.12.0 <3.0.0"
-  flutter: ">=1.20.0"
+  sdk: ">=3.2.2 <4.0.0"
+#  sdk: ">=2.12.0 <3.0.0"
 
 dependencies:
   flutter:
